--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
     font-family: 'Poppins', sans-serif;
     height: 100%;
     background: #18191d;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .background-video {
@@ -13,9 +15,32 @@ body {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    opacity: 70%;
+    opacity: 20%;
     z-index: -1;
 }
+
+.background-image {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 30%;
+    z-index: -1;
+    transform: translate3d(0, 0, 0);
+    transition: transform 0.3s ease;
+
+}
+
+#particles-js {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 50%;
+}
+
 
 video {
     object-fit: cover;
@@ -31,25 +56,32 @@ a {
 
 h2 {
     color: #fff;
-    font-size: 2.5rem;
     font-weight: bold;
+    font-size: 2rem;
+
 }
 
 .profile-image {
-    max-width: 300px;
-    max-height: 300px;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     overflow: hidden;
     transition: all 0.3s ease-in-out;
-    opacity: 100%;
+    border: 1px solid #472468;
+    perspective: 1000px;
+    transition: transform all 0.3s ease-in-out;
 }
+
 
 .profile-image:hover {
     max-width: 302px;
     max-height: 302px;
     opacity: 90%;
     box-shadow: 0 0 55px 1px #841dd82c;
+    transform: rotateY(15deg);
+
 }
+
 
 * {
     padding: 0;
@@ -67,6 +99,8 @@ img {
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #0a090c;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 nav {
@@ -84,10 +118,9 @@ nav {
     display: flex;
     align-items: center;
     gap: 3rem;
+    z-index: 1;
     margin-left: auto;
 }
-
-
 
 /* BUTTON */
 
@@ -139,9 +172,9 @@ svg {
     max-width: 1200px;
     margin: auto;
     padding: 5rem 2rem;
+    font-size: 16px;
+
 }
-
-
 
 
 /* Overview section*/
@@ -160,22 +193,20 @@ header {
 header .content h1 {
     color: #fff;
     margin-bottom: 1rem;
-    font-size: 3rem;
+    font-size: 5rem;
     font-weight: 700;
-    line-height: 4rem;
+    line-height: 6rem;
 }
 
 header .content h1 span {
     -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1px #fff;
+    -webkit-text-stroke: 1px #ffffff;
 }
 
 header .content p {
     margin-bottom: 2rem;
     color: #ccc;
 }
-
-
 
 
 section .header {
@@ -198,6 +229,7 @@ section .header {
 .overview-introduction {
     color: #ccc;
     max-width: 600px;
+    margin-bottom: 100px;
 }
 
 
@@ -206,15 +238,22 @@ section .header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 2rem;
+    margin-bottom: 3rem;
 }
 
 .features .card {
-    background-color: #27272ad0;
+    background-color: rgba(43, 43, 51, 0.816);
     padding: 1rem;
     border: 2px solid transparent;
-    border-radius: 15px;
+    border-radius: 25px;
     transition: all 0.3s ease;
 }
+
+.features .card:hover {
+    background-color: #444449;
+    border: 2px solid #777777;
+}
+
 
 .features .card h4 {
     margin-bottom: 0.5rem;
@@ -235,6 +274,28 @@ section .header {
     color: #ccc;
 }
 
+#language-badges {
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 30px;
+    display: flex;
+
+}
+
+#language-badges .card img {
+    display: inline-block;
+}
+
+#language-badges .card {
+    text-align: center;
+    background-color: #25262b80;
+}
+
+#language-badges .card:hover {
+    margin-left: 5px;
+    background-color: #50525a80;
+
+}
 
 
 /* SEPERATOR */
@@ -294,33 +355,42 @@ section .header {
 }
 
 
-
-
-
-
 /* PROJECTS SECTION */
+
+.section-title {
+    text-align: center;
+    color: #fff;
+    font-size: 44px;
+    margin-top: 50px;
+    border-top: 1px solid #ffffff70;
+    padding-top: 60px;
+}
 
 #projects {
     display: grid;
-    margin-right: 270px;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(calc(20% - 20px), 1fr));
     gap: 20px;
-    padding: 20px;
+    padding: 30px;
+    margin-bottom: 50px;
+    border-bottom: 1px solid #ffffff70;
+    padding-bottom: 70px;
 }
-
 
 .project {
     background: #25262b;
     padding: 1rem;
+    border: 2px solid rgba(174, 0, 255, 0);
+
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     margin-left: 10px;
-
+    z-index: 1;
+    transition: all 0.3s ease-in-out;
 }
 
 .project:hover {
-    background: #33343b8f;
-    transition: all 0.2s ease-in-out;
+    background: #4e4f5aab;
+    border: 2px solid rgba(134, 63, 167, 0.397);
 }
 
 .project img {
@@ -337,6 +407,7 @@ section .header {
 .project h3 {
     color: #A020F0;
     font-size: 22px;
+    font-weight: 500;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -351,7 +422,9 @@ section .header {
 }
 
 
-
+.view-code-link {
+    margin-left: 10px;
+}
 
 
 /* FOOTER SECTION */
@@ -370,6 +443,7 @@ section .header {
 .social-links {
     position: fixed;
     bottom: 20px;
+    z-index: 1;
     right: 20px;
     display: flex;
     gap: 10px;
@@ -394,4 +468,16 @@ footer nav ul {
 
 footer nav ul li {
     margin: 0 15px;
+}
+
+#contact {
+    padding: 50px;
+    border-radius: 8px;
+    font-size: 17px;
+}
+
+#contact h2 {
+    font-size: 38px;
+    margin-bottom: 20px;
+    font-family: 'Poppins', sans-serif;
 }
