--- a/style.css
+++ b/style.css
@@ -296,6 +296,31 @@ section .header {
 
 }
 
+.boxes {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.card {
+    background-color: #f3f4f6;
+    border-radius: 8px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+.card img {
+    width: 150px;
+    height: 40px;
+    object-fit: contain;
+}
 
 /* SEPERATOR */
 
@@ -476,8 +501,6 @@ section .header {
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
 }
-
-
 
 
 /* FOOTER SECTION */
