--- a/style.css
+++ b/style.css
@@ -484,11 +484,12 @@ section .header {
     height: 100%;
     background-color: rgba(0, 0, 0, 0.9);
     z-index: 1000;
-    display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
-
+    padding: 20px;
+    box-sizing: border-box;
+    overflow: auto;
 }
 
 .fullscreen:hover {
@@ -496,11 +497,30 @@ section .header {
 }
 
 .fullscreen img {
-    max-width: 90%;
+    max-width: 80%;
     max-height: 90%;
     border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
 }
+
+
+
+.skills-list .skill-item h4 {
+    font-size: 32px;
+    font-weight: bold;
+    color: #ffffff;
+    margin-bottom: 8px;
+}
+
+.skills-list .skill-item p {
+    font-size: 16px;
+    color: #d1d1d1;
+    line-height: 1.5;
+    max-width: 600px;
+    margin: 0 auto;
+    /* Center the description */
+}
+
 
 
 /* FOOTER SECTION */
